--- a/css/style.scss
+++ b/css/style.scss
@@ -1322,6 +1322,7 @@ $lighterskills: #080e31;
                                     justify-content: center;
                                     align-items: center;
                                     margin: 3vh 0 0 0;
+                                    // padding: 0 0 19vh 0;
                                     .back_arrow_one {
                                         background-color: $mainblue;
                                         color: white;
@@ -1390,7 +1391,7 @@ $lighterskills: #080e31;
                                 top: 0;
                                 left: 100%;
                                 width: 100%;
-                                height: 100vh;
+                                height: 103vh;
                                 display: block;
                                 background-color: $mainblue;
                                 // background-color: yellowgreen;
@@ -1621,6 +1622,10 @@ $lighterskills: #080e31;
                             ///////////////////////////////////////////////
                             /// 
                             /// APP 3 DESCRIPTION
+                            /// 
+                            
+
+                            // End of APP 3
                             
                             /// PORTFOLIO CONTENT HERE
                             .portfoliooutlinetablet {
@@ -2542,9 +2547,8 @@ $lighterskills: #080e31;
                 }
             }
         }
-        body.no-scroll {
+        .body.no-scroll {
             overflow: hidden;
-            position: fixed;
         }
     }
 }
